alignment fixed - skL to be added

--- a/22 SkL Product Card/styles.css
+++ b/22 SkL Product Card/styles.css
@@ -84,6 +84,7 @@ body{
 
 /* this has to be fixed */
 .buy{
+    align-self: flex-start;
     height: 2.1rem;
     width: 40%;
 }
